typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts.stderr
error: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts:4:5
  |
4 |     [e] = id++
  |     ^^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e' type=inline),
    span: Span {
        lo: BytePos(
            45,
        ),
        hi: BytePos(
            46,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts:4:6
  |
4 |     [e] = id++
  |      ^

error: UndefinedSymbol {
    sym: Atom('id' type=inline),
    span: Span {
        lo: BytePos(
            50,
        ),
        hi: BytePos(
            52,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts:4:11
  |
4 |     [e] = id++
  |           ^^

error: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts:5:5
  |
5 |     [e2]: number
  |     ^^^^^^^^^^^^

error: UndefinedSymbol {
    sym: Atom('e2' type=inline),
    span: Span {
        lo: BytePos(
            60,
        ),
        hi: BytePos(
            62,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts:5:6
  |
5 |     [e2]: number
  |      ^^

